// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications should render correctly when there are many branchlikes 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <DropdownIcon />
</span>
`;

exports[`applications should render correctly when there is only one branch and the user CAN'T admin the application 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
</span>
`;

exports[`applications should render correctly when there is only one branch and the user can admin the application 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <HelpTooltip
    overlay={
      <React.Fragment>
        <p>
          application.branches.help
        </p>
        <hr
          className="spacer-top spacer-bottom"
        />
        <ForwardRef(Link)
          to={
            {
              "pathname": "/project/admin/extension/developer-server/application-console",
              "search": "?id=my-project",
            }
          }
        >
          application.branches.link
        </ForwardRef(Link)>
      </React.Fragment>
    }
  >
    <PlusCircleIcon
      fill="#0271B9"
      size={12}
    />
  </HelpTooltip>
</span>
`;

exports[`projects should render correctly when branches support is disabled: alm with mrs 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <DocumentationTooltip
    content="branch_like_navigation.no_branch_support.content_x.mr.alm.gitlab"
    data-test="branches-support-disabled"
    links={
      [
        {
          "doc": false,
          "href": "https://www.sonarsource.com/plans-and-pricing/developer/",
          "label": "learn_more",
        },
      ]
    }
    title="branch_like_navigation.no_branch_support.title.mr"
  >
    <PlusCircleIcon
      fill="#0271B9"
      size={12}
    />
  </DocumentationTooltip>
</span>
`;

exports[`projects should render correctly when branches support is disabled: alm with prs 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <DocumentationTooltip
    content="branch_like_navigation.no_branch_support.content_x.pr.alm.github"
    data-test="branches-support-disabled"
    links={
      [
        {
          "doc": false,
          "href": "https://www.sonarsource.com/plans-and-pricing/developer/",
          "label": "learn_more",
        },
      ]
    }
    title="branch_like_navigation.no_branch_support.title.pr"
  >
    <PlusCircleIcon
      fill="#0271B9"
      size={12}
    />
  </DocumentationTooltip>
</span>
`;

exports[`projects should render correctly when branches support is disabled: default 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <DocumentationTooltip
    content="branch_like_navigation.no_branch_support.content"
    data-test="branches-support-disabled"
    links={
      [
        {
          "doc": false,
          "href": "https://www.sonarsource.com/plans-and-pricing/developer/",
          "label": "learn_more",
        },
      ]
    }
    title="branch_like_navigation.no_branch_support.title"
  >
    <PlusCircleIcon
      fill="#0271B9"
      size={12}
    />
  </DocumentationTooltip>
</span>
`;

exports[`projects should render correctly when there are many branchlikes 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <DropdownIcon />
</span>
`;

exports[`projects should render correctly when there is only one branchlike 1`] = `
<span
  className="display-flex-center flex-shrink text-ellipsis"
>
  <BranchLikeIcon
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    fill="#0271B9"
  />
  <span
    className="spacer-left spacer-right flex-shrink text-ellipsis js-branch-like-name"
    title="master"
  >
    master
  </span>
  <DocumentationTooltip
    content="branch_like_navigation.only_one_branch.content"
    data-test="only-one-branch-like"
    links={
      [
        {
          "href": "/analyzing-source-code/branches/branch-analysis/",
          "label": "branch_like_navigation.only_one_branch.documentation",
        },
        {
          "href": "/analyzing-source-code/pull-request-analysis",
          "label": "branch_like_navigation.only_one_branch.pr_analysis",
        },
        {
          "doc": false,
          "href": "/tutorials?id=my-project",
          "inPlace": true,
          "label": "branch_like_navigation.tutorial_for_ci",
        },
      ]
    }
    title="branch_like_navigation.only_one_branch.title"
  >
    <PlusCircleIcon
      fill="#0271B9"
      size={12}
    />
  </DocumentationTooltip>
</span>
`;
